z-indexes issue fixed

--- a/assets/sass/auja.sass
+++ b/assets/sass/auja.sass
@@ -372,7 +372,7 @@ ul#main-menu
         -webkit-animation-duration: 0.25s !important
         z-index: 99
         &.animated:last-child
-            z-index: 1 !important
+            z-index: 1
         &:first-child > div 
             margin-left: 45px
         &:first-child > div
@@ -984,6 +984,7 @@ form
                 -moz-animation-duration: 0.25s
                 -webkit-animation-name: fadeIn
                 -webkit-animation-duration: 0.25s
+                z-index: 999 !important
             &.panel-menu
                 & > div
                     width: 100%
